# Git_Experiments

automate_commits/: Makefile  README.asc  go.sh
automate_commits/libgit2/: CMakeLists.txt  cmake_lib_hints.txt  go.cpp
rebase_example/: Makefile  README.asc  go.sh  go2.sh
